--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,9 +1,3 @@
-@font-face {
-  font-family: 'Open Sans Condensed', sans-serif;
-  src: url("/fonts/OpenSansCondensed-Bold.ttf") format("ttf");
-}
-
-
 html {
   height: 100%;
   width: 100%;
@@ -11,12 +5,116 @@ html {
 
 body {
   margin: 0;
-  font-family: 'PT Sans', sans-serif;
-  font-size: 14px;
-  line-height: 22px;
+  font-family: 'Hind', sans-serif;
+  font-size: 16px;
+  line-height: 20px;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  align-content: space-between;
+}
+
+header {
+  background-image: url("../img/header_bg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 100%;
+  height: 1000px;
+}
+
+.hr {
+  width: 100%;
+  height: 70px;
+  border-bottom: 1px solid #B5B4B1;
+  position: static;
+}
+
+.logo {
+  width: 100px;
+  height: 50px;
+  color: #B5B4B1;
+  font-size: 30px;
+  position: absolute;
+  margin-top: 20px;
+}
+
+.header {
+  max-width: 1170px;
+  height: 100%;
+  padding: 0 15px;
+  margin: 0 auto;
+  position: relative;
+  top: -60px;
+
+}
+
+.topMenu {
+  color: #B5B4B1;
+  max-width: 50%;
+  right: 0;
+  height: 70px;
+  position: absolute;
+  max-width: 50vw;
+  overflow-x: scroll;
+  //scroll-behavior: smooth;
+
+  ul {
+
+    li {
+      float: right;
+      list-style-type: none;
+      margin-left: 15px;
+      min-width: 50px;
+    }
+  }
+}
+
+.menuContent {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  margin: auto 0;
+  text-align: left;
+  color: white;
+
+
+  h1 {
+    font-size: 5vw;
+
+  }
+
+  .headerText {
+    width: 40%;
+  }
+
+
+}
+.button {
+  width: 150px;
+  height: 40px;
+  border: 2px solid white;
+  text-align: center;
+  margin-top: 30px;
+  padding-top: 20px;
+
+}
+.button:hover{
+  background-color: white;
+  color: black;
+}
+
+main{
+  max-width: 1170px;
+  height: 100%;
+  padding: 0 15px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+.first{
+
 }
