--- a/scss/index.scss
+++ b/scss/index.scss
@@ -54,12 +54,14 @@ header {
   max-width: 50%;
   right: 0;
   height: 70px;
-  position: absolute;
+  float: right;
+  //overflow-x:auto;
+  //position: absolute;
 
 
   ul {
     height: 100%;
-    overflow-x: auto;
+    overflow-x:auto;
 
     li {
       height: 100%;
@@ -141,29 +143,30 @@ main {
     }
   }
 }
-.secondwraper{
+
+.secondwraper {
   width: 100%;
-  background-color: #FAFAFA;
+  background-color: #F5F5F5;
 }
-.second{
-  margin: 100px  auto;
+
+.second {
+  margin: 40px auto;
   max-width: 1170px;
   padding: 0 15px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-
-  div{
-    width: 500px;
-  }
 }
-.secondl{
-height: 300px;
-  p{
 
-width: 90%;
+.secondl {
+  height: 300px;
+  width: 40%;
+
+  p {
+    width: 90%;
   }
-  div{
+
+  div {
     width: 90px;
     height: 30px;
     background-color: #515769;
@@ -171,37 +174,47 @@ width: 90%;
     text-align: center;
     padding-top: 10px;
 
-    &:hover{
+    &:hover {
       background-color: #3DBED2;
-        }
+    }
   }
 }
 
-.secondr{
+.secondr {
+  width: 40%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 
-  div:first-of-type{
+  div {
+    margin-top: 2px;
+    padding: 10px 20px;
+    box-shadow: 1px 1px lightgray;
+  }
+
+  div:first-of-type {
     background-color: #3DBED2;
     height: 50%;
+
   }
-  div:not(:first-of-type){
+
+  div:not(:first-of-type) {
     background-color: white;
     height: 20%;
     box-shadow: 2px 2px lightgray;
 
-    &:hover{
+    &:hover {
       color: #9AABC6;
     }
   }
 }
 
-.thirdwraper{
+.thirdwraper {
   width: 100%;
   background-color: white;
 }
-.third{
+
+.third {
   max-width: 1170px;
   padding: 0 15px;
   display: flex;
@@ -209,228 +222,396 @@ width: 90%;
   justify-content: space-between;
   margin: 50px auto;
 }
-.thirdcontent{
+
+.thirdcontent {
   height: 20%;
-  p{
+
+  p {
     width: 50%;
+    color: #999999;
   }
 }
-.thirdblock{
+
+.thirdblock {
   height: 70%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 
 }
-.thirdblock1{
+
+.thirdblock1 {
   width: 30%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-&:hover{
-  color: #999999;
-}
 
 }
-.thirdblock1_1{
+
+.thirdblock1_1 {
   width: 100%;
-  img{
+  height: 60%;
+background-color: black;
+  img {
     max-width: 100%;
+    &:hover{
+            opacity: 0.4;
+    }
   }
 }
-.thirdblock1_2{
+
+.thirdblock1_2 {
   width: 100%;
-h3{
-  float: left;
-}
-  p{
+  &:hover {
+    color: #999999;
+  }
+  h3 {
+    float: left;
+  }
+
+  p {
     height: 100%;
     padding-top: 4px;
     margin-left: 40px;
-float: left;
+    float: left;
     color: #999999;
   }
 }
-.thirdblock1_4{
 
-  p{
+.thirdblock1_3 {
+  &:hover {
+    color: #999999;
+  }
+  p {
+    color: #999999;
+  }
+}
+
+.thirdblock1_4 {
+  &:hover {
+    color: #999999;
+  }
+  p {
     display: inline;
   }
-  p:first-of-type{
+
+  p:first-of-type {
     font-weight: bold;
   }
-  p:last-of-type{
-   font-size: large;
+
+  p:last-of-type {
+    font-size: large;
     color: #3DBED2;
   }
 }
 
-.fourthwraper{
+.fourthwraper {
   width: 100%;
-  background-color: #FAFAFA;
+  background-color: #F5F5F5;
 }
+
 .fourth {
   margin: 100px auto;
   max-width: 1170px;
   padding: 0 15px;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
 }
-.fourthblock{
+
+.fourthblock {
   background-color: white;
-  width: 33%;
+  width: 28%;
   height: 330px;
-  ul{
-    list-style-type:none;
+  padding: 30px;
+
+  ul {
+    list-style-type: none;
     padding-left: 0;
 
-    li{
-      p{
+    li {
+      p {
         display: inline;
         font-weight: bold;
         color: #3DBED2;
       }
     }
   }
-  div:nth-of-type(2){
+
+  div:nth-of-type(2) {
     p {
-      &:first-of-type{
+      &:first-of-type {
 
         font-weight: bold;
       }
-      &:last-of-type{
+
+      &:last-of-type {
 
         font-weight: bold;
       }
+
       display: inline;
     }
   }
+
+  div:nth-of-type(3) {
+    color: #999999;
+  }
+
   div:nth-of-type(5) {
     background-color: lightgray;
     height: 30px;
     width: 90px;
     text-align: center;
     padding-top: 10px;
-    &:hover{
+
+    &:hover {
       background-color: #3DBED2;
     }
   }
 
 
-  &:nth-of-type(2){
-   height: 380px;
+  &:nth-of-type(2) {
+    height: 380px;
     margin-top: -25px;
-    padding-top: 25px;
+    padding-top: 45px;
   }
 }
-.fifthwraper{
+
+.fifthwraper {
   width: 100%;
   background-color: white;
 }
-.fifth{
+
+.fifth {
   max-width: 1170px;
   padding: 0 15px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: 50px auto;
+  margin: 40px auto;
 }
-.fifth1{
+
+.fifth1 {
   width: 50%;
   height: 10%;
-  p{
-    color:#999999 ;
-  ;
+
+  p {
+    color: #999999;;
   }
 }
-.fifth2{
+
+.fifth2 {
   height: 49%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  div:first-child{
+
+  div:first-child {
     width: 66%;
 
 
-    img{
+    img {
 
       height: 98%;
       width: 100%;
-       }
+    }
   }
 
-  div:last-child{
+  div:last-child {
     width: 32%;
 
-    img{
+    img {
 
       height: 98%;
       width: 100%;
     }
   }
 }
-.fifth3{
+
+.fifth3 {
   height: 39%;
 
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 
-  div{
-    width:32%;
+  div {
+    width: 32%;
     height: 100%;
 
-    img{
+    img {
       width: 100%;
     }
   }
 }
-.sixwraper{
+
+.sixwraper {
   width: 100%;
   border-top: 1px dotted gray;
 }
-.six{
+
+.six {
   max-width: 1170px;
   padding: 0 15px;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   margin: 50px auto;
-  img{
+
+  img {
     width: 100%;
-    &:hover{
+
+    &:hover {
       opacity: 0.4;
     }
   }
 }
 
-.map{
-  @media screen and(max-width: 1024px){
-display: none;
+.map {
+  @media screen and(max-width: 1024px) {
+
+    display: none;
   }
 }
-.footermenuwraper{
+
+.footermenuwraper {
   width: 100%;
 }
-.footermenu{
+
+.footermenu {
   max-width: 1170px;
   padding: 0 15px;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   margin: 50px auto;
-div{
-  margin-right: 30px;
-  ul{
-    list-style-type: none;
 
-    li{
-      &:hover{
-        color: #999999;
+  div {
+    margin-right: 30px;
+
+    ul {
+      list-style-type: none;
+
+      li {
+        &:hover {
+          color: #999999;
+        }
+      }
+    }
+  }
+
+}
+
+.serviceswraper {
+  width: 100%;
+}
+
+.services {
+  max-width: 1170px;
+  padding: 0 15px;
+  display: flex;
+  margin: 50px auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.servicestop {
+  height: 20%;
+  width: 50%;
+
+  p {
+    color: #999999;
+  }
+}
+
+.serviceslist {
+  width: 100%;
+  height: 80%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+
+  div {
+    width: 25%;
+    margin-top: 30px;
+    padding: 30px;
+
+    p {
+      color: #999999;
+    }
+
+    &:nth-of-type(2) {
+      background-color: #3DBED2;
+      color: white;
+
+      p {
+        color: white;
+      }
+    }
+
+    &:hover {
+      img {
+        display: none;
       }
     }
   }
 }
 
+.contactwraper {
+  width: 100%;
+  border-top: 1px dotted gray;
+}
+
+.contact {
+  max-width: 1170px;
+  padding: 0 15px;
+  display: flex;
+  margin: 50px auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.contactblock1 {
+  width: 30%;
+}
+
+
+.contactblock1_2 {
+  width: 100%;
+
+  h3 {
+    float: left;
+    font-size: large;
+  }
+
+
+  p:first-of-type {
+    height: 100%;
+    padding-top: 4px;
+    margin-left: 40px;
+    float: left;
+    color: #999999;
+  }
+
+  p:last-of-type {
+    clear: both;
+  }
+}
+
+.contactblock1_3 {
+  p {
+    color: #999999;
+  }
+}
+
+.contactblock1_4 {
+  p {
+    display: inline-block;
+    margin-top: -2px;
+    vertical-align: middle;
+  }
 }
