--- a/scss/index.scss
+++ b/scss/index.scss
@@ -576,7 +576,8 @@ background-color: black;
 }
 
 .contactblock1 {
-  width: 30%;
+  width: 33%;
+  margin-right: 5px;
 }
 
 
@@ -591,7 +592,7 @@ background-color: black;
 
   p:first-of-type {
     height: 100%;
-    padding-top: 4px;
+      padding-top: 4px;
     margin-left: 40px;
     float: left;
     color: #999999;
@@ -605,6 +606,7 @@ background-color: black;
 .contactblock1_3 {
   p {
     color: #999999;
+    width: 80%;
   }
 }
 
